--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@tanstack/react-query": "^5.74.0",
     "antd": "^5.24.7",
     "axios": "^1.8.4",
+    "axios-auth-refresh": "^3.3.6",
+    "js-cookie": "^3.0.5",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.5.0",
