--- a/package.json
+++ b/package.json
@@ -10,10 +10,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@ant-design/plots": "^2.3.3",
     "@tanstack/react-query": "^5.74.0",
     "antd": "^5.24.7",
     "axios": "^1.8.4",
     "axios-auth-refresh": "^3.3.6",
+    "echarts": "^5.6.0",
+    "echarts-for-react": "^3.0.2",
     "js-cookie": "^3.0.5",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
