--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@ant-design/plots": "^2.3.3",
+    "@ant-design/plots": "^1.2.6",
     "@tanstack/react-query": "^5.74.0",
     "antd": "^5.24.7",
     "axios": "^1.8.4",
@@ -19,9 +19,10 @@
     "echarts": "^5.6.0",
     "echarts-for-react": "^3.0.2",
     "js-cookie": "^3.0.5",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-router-dom": "^7.5.0",
+    "react-toastify": "^11.0.5",
     "zustand": "^5.0.3"
   },
   "devDependencies": {
